RESOLVED FIXED214027
Unable to scroll elcomerico.pe page until the page finishes loading
https://bugs.webkit.org/show_bug.cgi?id=214027
Summary Unable to scroll elcomerico.pe page until the page finishes loading
Simon Fraser (smfr)
Reported 2020-07-06 20:38:07 PDT
Unable to scroll elcomerico.pe page until the page finishes loading
Attachments
Patch (11.90 KB, patch)
2020-07-06 20:42 PDT, Simon Fraser (smfr)
koivisto: review+
Simon Fraser (smfr)
Comment 1 2020-07-06 20:42:22 PDT
Simon Fraser (smfr)
Comment 2 2020-07-06 20:42:24 PDT
Sam Weinig
Comment 3 2020-07-07 08:01:19 PDT
Comment on attachment 403659 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403659&action=review > Source/WebCore/platform/graphics/transforms/TransformationMatrix.h:282 > - bool isInvertible() const; // If you call this this, you're probably doing it wrong. > + WEBCORE_EXPORT bool isInvertible() const; // If you call this this, you're probably doing it wrong. Suspicious comment is suspicious. Maybe time to update this comment to be clear about why this might be the case or just remove it?
Simon Fraser (smfr)
Comment 4 2020-07-07 11:17:08 PDT
Note You need to log in before you can comment on or make changes to this bug.