Unable to scroll elcomerico.pe page until the page finishes loading https://bugs.webkit.org/show_bug.cgi?id=214027 <rdar://problem/64646259>

Reviewed by Antti Koivisto.
Source/WebCore:

<https://elcomercio.pe/mundo/eeuu/que-visas-para-estados-unidos-fueron-suspendidas-por-orden-de-donald-trump-hasta-fin-de-ano-y-a-quien-afecta-la-medida-noticia/>
had a scaleX(0) element as an ancestor of an overflow:scroll. The CALayer hit-testing code failed to take
non-invertible transforms into account, causing the overflow:scroll to intercept scrolling events.

Fix by explicitly testing for non-invertible transforms, and, when found, bailing from the
sublayer walk. A non-invertible layer transform makes all its descendants non hit-testable.

Tests: fast/scrolling/ios/non-invertible-transformed-scroller-ancestor.html
       fast/scrolling/mac/non-invertible-transform-hit-testing.html

* page/scrolling/mac/ScrollingTreeMac.mm:
(collectDescendantLayersAtPoint):
* platform/graphics/transforms/TransformationMatrix.h:

Source/WebKit:

The same issue with non-invertible transforms existed on iOS. r248015 attempted to
fix some instances of this, but failed to take into account the fact that a non-invertible
transfrom should also prevent hit-testing of descendant views.

* UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.mm:
(WebKit::collectDescendantViewsAtPoint):

LayoutTests:

macOS and iOS tests with non-invertible transforms.

* fast/scrolling/ios/non-invertible-transformed-scroller-ancestor-expected.txt: Added.
* fast/scrolling/ios/non-invertible-transformed-scroller-ancestor.html: Added.
* fast/scrolling/mac/non-invertible-transform-hit-testing-expected.txt: Added.
* fast/scrolling/mac/non-invertible-transform-hit-testing.html: Added.

Canonical link: https://commits.webkit.org/226844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264031 268f45cc-cd09-0410-ab3c-d52691b4dbfc